--- a/site/index.html
+++ b/site/index.html
@@ -6,7 +6,7 @@
     <title>coursera</title>
 </head>
 <body>
-    <p>hello coursera</p>
+    <p>hello coursera, its a great course</p>
 
 </body>
 </html>
