just changing stuff

--- a/another/hello.html
+++ b/another/hello.html
@@ -6,9 +6,7 @@
     <title>testing</title>
 </head>
 <body>
-    <p>hello coursera, its a great course</p>
-    <p>testing to see if this works</p>
-
+    <p>trying this out in another file</p>
 
 </body>
 </html>
