--- a/another/hello.html
+++ b/another/hello.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>testing</title>
 </head>
-<body>
-    <p>tin another file</p>
+<body>in  file</p>
     <p>XDDD</p>
 
 </body>
